# data-simulator-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deployment.yml
src/: data_generator.py  main.py
src/api/: deps.py
src/api/routes/: carriers.py  deliveries.py  reset.py  simulation.py  vehicles.py  warehouses.py
src/core/: config.py  database.py  security.py
src/models/: carrier.py  delivery.py  vehicle.py  warehouse.py
src/schemas/: carrier.py  delivery.py  vehicle.py  warehouse.py
src/services/: corruption.py  generator.py
tests/: test_api.py  test_carriers.py  test_deliveries.py  test_simulation.py  test_vehicles.py  test_warehouses.py
